--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@types/faker": "^5.5.9",
-    "faker": "^6.6.6"
+    "@withshepherd/faker": "^5.5.5"
   }
 }
