--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/google.maps": "^3.47.2",
     "@withshepherd/faker": "^5.5.5"
   }
 }
